--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -41,8 +41,8 @@ $grey-dark: #080404;
 $purple-light: #b770ff;
 $purple-normal: #7c00f9;
 $purple-dark: #430187;
-
-$font-family-standard: sans-serif, Helvetica, Arial;
+$black-standard: #282828;
+$font-family-standard: 'Lato', 'Mandali', 'Roboto';
 $font-size-biggest: 30px;
 $font-size-bigger: 24px;
 $font-size-big: 20px;
