--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -8,7 +8,7 @@
                 <a [routerLink]="['/canvas-drawing']">Team</a>
             </li>
             <li>
-                <a [routerLink]="['/canvas-drawing']">Contact</a>
+                <a [routerLink]="['/contacts']">Contact</a>
             </li>
         </ul>
     </div>
