--- a/src/app/shared/input-default/input-default.component.scss
+++ b/src/app/shared/input-default/input-default.component.scss
@@ -26,10 +26,11 @@
       z-index: -1;
     }
   }
+  
   .input-default {
     height: 40px;
     width: 100%;
-    border: 1px solid $purple-normal;
+    border: 1px solid $black-standard;
     border-radius: 5px;
     outline: none;
     padding: 0 0 0 10px;
