Add team and contact

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -42,6 +42,7 @@ $purple-light: #b770ff;
 $purple-normal: #7c00f9;
 $purple-dark: #430187;
 $black-standard: #282828;
+$white-standard: white;
 $font-family-standard: 'Lato', 'Mandali', 'Roboto';
 $font-size-biggest: 30px;
 $font-size-bigger: 24px;
