--- a/src/app/shared/input-default/input-default.component.scss
+++ b/src/app/shared/input-default/input-default.component.scss
@@ -20,6 +20,8 @@
     &.input-default-focus {
       top: -8px;
       padding: 0 5px;
+      border: 0.5px solid black;
+      border-radius: 10px;
       font-size: $font-size-smaller;
     }
 
