--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,6 @@
-$font-color-bold: #303133;
-$font-color-standard: #6e6e6e;
-$black-main: #121212;
-$white: white;
+$color-font-standard: #6e6e6e;
+$color-black: #121212;
+$color-white: white;
 $color-main: #1bbc9b;
 $font-family-standard: 'Lato', 'Mandali', 'Roboto';
 $font-size-biggest: 30px;
