--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,9 +3,10 @@ $color-black: #121212;
 $color-white: white;
 $color-main: #1bbc9b;
 $font-family-standard: 'Lato', 'Mandali', 'Roboto';
-$font-size-biggest: 30px;
+$font-size-biggest: 40px;
 $font-size-bigger: 24px;
 $font-size-big: 20px;
 $font-size-normal: 16px;
 $font-size-small: 14px;
 $font-size-smaller: 12px;
+$box-shadow-standard: 0px 0px 5px rgba(0, 0, 0, 0.15);
