--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,11 +1,13 @@
 <div class="header-holder">
-    <div class="nav-left"><h1 (click)="navigateToHome()">Scratch Team</h1></div>
+    <div class="nav-left">
+        <h1 (click)="navigateToHome()">Scratch Team</h1>
+    </div>
     <ul class="nav-right">
         <li>
-            <a [routerLink]="['/team']">Team</a>
+            <a [routerLink]="['/team']">TEAM</a>
         </li>
         <li>
-            <a [routerLink]="['/contact']">Contact</a>
+            <a [routerLink]="['/contact']">CONTACT</a>
         </li>
     </ul>
 </div>
