--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="home-holder">
-    <div>
-        <app-input-default label="Don't click me!" class="col-xs-12 col-sm-6"></app-input-default>
-        <app-input-default label="Don't click me!" class="col-xs-12 col-sm-6"></app-input-default>
+    <div class="home-title-holder">
+        <h1 class="home-title">AT SCRATCH WE LOVE FUNCTIONAL WEBSITES AND MOBILE APPS</h1>
+    </div>
+    <div class="home-services-holder">
+        <h2 class="home-services-title">SCRATCH SERVICES</h2>
     </div>
 </div>
