--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -1,2 +1,41 @@
+@import '../../../variables';
+
 .home-holder {
+  .home-title-holder {
+    background-image: url('../../../assets/images/home-page-img.jpg');
+    background-size: 100% 100%;
+    padding: 0 20%;
+    height: 500px;
+    text-align: center;
+    margin: 0 0 50px;
+
+    @media (max-width: 1024px) {
+      height: 400px;
+      padding: 0 10%;
+    }
+
+    @media (max-width: 767px) {
+      height: 300px;
+    }
+
+    @media (max-width: 500px) {
+      height: 200px;
+    }
+
+    .home-title {
+      color: $color-white;
+      position: relative;
+      top: 25%;
+      margin: 0;
+      transform: translateY(-50%);
+      font-size: $font-size-biggest;
+    }
+  }
+
+  .home-services-holder {
+    text-align: center;
+    .home-services-title {
+      color: $color-black;
+    }
+  }
 }
