--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -16,9 +16,32 @@
   .nav-left {
     float: left;
     margin: 0 0 0 30px;
+    position: relative;
+    cursor: pointer;
+
+    .header-square {
+      position: relative;
+      top: 3px;
+      float: left;
+      width: 35px;
+      height: 35px;
+      background-color: $color-main;
+      transform: rotate(45deg);
+
+      .header-square-letter {
+        position: absolute;
+        top: 0;
+        left: 10px;
+        color: $color-white;
+        font-size: $font-size-bigger;
+        transform: rotate(-45deg);
+      }
+    }
 
     h1 {
+      float: left;
       margin: 0;
+      padding: 0 0 0 25px;
       color: $color-black;
       font-size: $font-size-big;
       line-height: 2.25;
@@ -46,6 +69,10 @@
         font-size: $font-size-small;
         line-height: 3.2;
         &:hover {
+          color: $color-main;
+        }
+
+        &.is-active {
           color: $color-main;
         }
       }
