Improve responsive design

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -4,5 +4,17 @@
     </div>
     <div class="home-services-holder">
         <h2 class="home-services-title">SCRATCH SERVICES</h2>
+        <div class="home-services-column col-xs-12 col-sm-6">
+            <app-square-icon><span class="home-square-web">Web</span></app-square-icon>
+            <p class="home-square-paragraph">
+                Rich, complex and functional websites with Angular / React, HTML5 games and Node.js back end.
+            </p>
+        </div>
+        <div class="home-services-column col-xs-12 col-sm-6">
+            <app-square-icon><i class="home-square-mobile fa fa-mobile"></i></app-square-icon>
+            <p class="home-square-paragraph">
+                Hybrid Mobile Development with React Native / NativeScript on IOS and Android.
+            </p>
+        </div>
     </div>
 </div>
