--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -19,6 +19,10 @@
     position: relative;
     cursor: pointer;
 
+    @media (max-width: 500px) {
+      margin: 0 0 0 20px;
+    }
+
     .header-square {
       position: relative;
       top: 3px;
@@ -46,6 +50,10 @@
       font-size: $font-size-big;
       line-height: 2.25;
       cursor: pointer;
+
+      @media (max-width: 500px) {
+        padding: 0 0 0 15px;
+      }
     }
   }
 
@@ -59,6 +67,9 @@
       display: inline-block;
       margin: 0 30px 0 0;
       height: 100%;
+      @media (max-width: 500px) {
+        margin: 0 10px 0 0;
+      }
 
       a {
         display: inline-block;
