--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -6,12 +6,14 @@
         <h2 class="home-services-title">SCRATCH SERVICES</h2>
         <div class="home-services-column col-xs-12 col-sm-6">
             <app-square-icon><span class="home-square-web">Web</span></app-square-icon>
+            <h2 class="home-square-title">Web Development</h2>
             <p class="home-square-paragraph">
                 Rich, complex and functional websites with Angular / React, HTML5 games and Node.js back end.
             </p>
         </div>
         <div class="home-services-column col-xs-12 col-sm-6">
             <app-square-icon><i class="home-square-mobile fa fa-mobile"></i></app-square-icon>
+            <h2 class="home-square-title">Mobile Development</h2>
             <p class="home-square-paragraph">
                 Hybrid Mobile Development with React Native / NativeScript on IOS and Android.
             </p>
