Add styles and components

--- a/src/app/contact/contact/contact.component.html
+++ b/src/app/contact/contact/contact.component.html
@@ -3,4 +3,5 @@
     <app-input-default label="Name"></app-input-default>
     <app-input-default label="E-mail"></app-input-default>
     <app-input-default label="Phone"></app-input-default>
+    <app-textarea label="About Your Project"></app-textarea>
 </div>
