--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -3,7 +3,7 @@
         <h1 class="home-title">AT SCRATCH WE LOVE FUNCTIONAL WEBSITES AND MOBILE APPS</h1>
     </div>
     <div class="home-services-holder">
-        <h2 class="home-services-title">SCRATCH SERVICES</h2>
+        <h2 class="home-section-title">SCRATCH SERVICES</h2>
         <div class="home-services-column col-xs-12 col-sm-6">
             <app-square-icon><span class="home-square-web">Web</span></app-square-icon>
             <h2 class="home-square-title">Web Development</h2>
@@ -18,5 +18,11 @@
                 Hybrid Mobile Development with React Native / NativeScript on IOS and Android.
             </p>
         </div>
+    </div>
+    <div class="home-technologies-holder">
+        <h2 class="home-section-title">TECHNOLOGIES</h2>
+    </div>
+    <div class="home-team-holder">
+        <h2 class="home-section-title">TEAM</h2>
     </div>
 </div>
