--- a/src/app/contact/contact/contact.component.scss
+++ b/src/app/contact/contact/contact.component.scss
@@ -3,8 +3,7 @@
 .contact-holder {
   .contact-title {
     text-align: center;
-    margin: 20px 0 30px;
-    font-size: $font-size-bigger;
-    font-family: $font-family-standard;
+    margin: 30px 0 40px;
+    font-size: $font-size-big;
   }
 }
