--- a/src/app/contact/contact/contact.component.scss
+++ b/src/app/contact/contact/contact.component.scss
@@ -1,6 +1,8 @@
 @import '../../../variables';
 
 .contact-holder {
+  margin-bottom: 40px;
+
   .contact-title {
     text-align: center;
     margin: 30px 0 40px;
