--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -24,5 +24,8 @@
     </div>
     <div class="home-team-holder">
         <h2 class="home-section-title">TEAM</h2>
+        <div *ngFor="let member of teamMembers" class="col-xs-12 col-sm-6">
+            <app-member-preview [memberInfo]="member"></app-member-preview>
+        </div>
     </div>
 </div>
