--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -38,6 +38,7 @@
   .home-section-title {
     color: $color-black;
     font-size: $font-size-big;
+    margin: 30px 0 20px;
   }
 
   .home-services-holder {
