--- a/src/app/contact/contact/contact.component.html
+++ b/src/app/contact/contact/contact.component.html
@@ -1,5 +1,6 @@
 <div class="contact-holder col-xs-12 col-sm-6 col-sm-offset-3">
     <h1 class="contact-title">DISCUSS YOUR PROJECT WITH US</h1>
+    <app-separator iconType="envelope"></app-separator>
     <app-input-default label="Name"></app-input-default>
     <app-input-default label="E-mail"></app-input-default>
     <app-input-default label="Phone"></app-input-default>
