--- a/src/app/contact/contact/contact.component.scss
+++ b/src/app/contact/contact/contact.component.scss
@@ -1,11 +1,12 @@
 @import '../../../variables';
+@import '../../../mixins';
 
 .contact-holder {
   margin-bottom: 40px;
 
   .contact-title {
     text-align: center;
-    margin: 30px 0 40px;
+    margin: 30px 0 20px;
     font-size: $font-size-big;
   }
 }
