--- a/src/app/shared/separator/separator.component.html
+++ b/src/app/shared/separator/separator.component.html
@@ -1,3 +1,3 @@
-<div class="separator-holder col-xs-12">
+<div class="separator-holder">
     <span><i class="fa fa-{{ iconType }}"></i></span>
 </div>
