Add linkedin icon

--- a/src/app/shared/member-preview/member-preview.component.html
+++ b/src/app/shared/member-preview/member-preview.component.html
@@ -2,6 +2,6 @@
     <img class="member-image" src="{{ memberInfo?.imgUrl }}" alt="Member Image" />
     <h1 class="member-name">{{ memberInfo?.firstName }} {{ memberInfo?.lastName }}</h1>
     <h3 class="member-profession">
-        {{ memberInfo?.profession }} | <a class="member-linkedIn" href="{{ memberInfo?.linkedIn }}">LinkedIn</a>
+        {{ memberInfo?.profession }} |<a class="member-linkedIn" href="{{ memberInfo?.linkedIn }}"><i class="fa fa-linkedin-square"></i>LinkedIn</a>
     </h3>
 </div>
