--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -2,7 +2,7 @@
 @import '../../../variables';
 
 .footer-holder {
-  height: 80px;
+  min-height: 80px;
   background-color: $color-black;
   @include clearfix();
 
