--- a/src/app/contact/contact/contact.component.scss
+++ b/src/app/contact/contact/contact.component.scss
@@ -7,6 +7,16 @@
   .contact-title {
     text-align: center;
     margin: 30px 0 20px;
-    font-size: $font-size-big;
+    font-size: $font-size-bigger;
+  }
+
+  .contact-info {
+    text-align: center;
+    color: $color-font-standard;
+    font-weight: bold;
+    margin: 0 0 20px;
+    h5 {
+      font-size: $font-size-normal;
+    }
   }
 }
