Add working contact form

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,6 +2,7 @@ $color-font-standard: #6e6e6e;
 $color-black: #121212;
 $color-white: white;
 $color-main: #1bbc9b;
+$color-error: #f44242;
 $font-family-standard: 'Lato', 'Mandali', 'Roboto';
 $font-size-biggest: 40px;
 $font-size-bigger: 24px;
