--- a/src/app/shared/input-default/input-default.component.html
+++ b/src/app/shared/input-default/input-default.component.html
@@ -6,7 +6,9 @@
         [(ngModel)]="value"
         id="{{ randomInputId }}"
         (click)="onInputFocus()"
+        (change)="onInputChange()"
         (blur)="onInputBlur()"
         class="input-default"
     />
+    <ng-content></ng-content>
 </div>
