--- a/src/app/shared/textarea/textarea.component.html
+++ b/src/app/shared/textarea/textarea.component.html
@@ -9,6 +9,8 @@
         rows="10"
         [(ngModel)]="value"
         (click)="onInputFocus()"
+        (change)="onInputChange()"
         (blur)="onInputBlur()"
     ></textarea>
+    <ng-content></ng-content>
 </div>
